--- a/Woong_Android/app/src/main/AndroidManifest.xml
+++ b/Woong_Android/app/src/main/AndroidManifest.xml
@@ -18,7 +18,11 @@
         </activity>
         <activity android:name=".Login.LoginActivity" />
         <activity android:name=".Login.ConsumerLoginActivity" />
-        <activity android:name=".Join.ConsumerTermsActivity"></activity>
+        <activity android:name=".Join.ConsumerTermsActivity" />
+        <activity android:name=".Join.ConsumerJoin1Activity" />
+        <activity android:name=".Join.ConsumerJoin2Activity" />
+        <activity android:name=".Join.ConsumerJoin3Activity" />
+        <activity android:name=".SplashActivity"></activity>
     </application>
 
 </manifest>
