--- a/Woong_Android/app/src/main/AndroidManifest.xml
+++ b/Woong_Android/app/src/main/AndroidManifest.xml
@@ -10,25 +10,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
-
-        </activity>
-<<<<<<< HEAD
-<<<<<<< HEAD
-        <activity android:name=".map.LocationChange"></activity>
-=======
-        <activity android:name=".map.LocationChange" />
->>>>>>> e9ce95e45685732cdff64d58fe241ed281160619
-=======
-        <activity android:name=".map.LocationChange" />
->>>>>>> c4421a3e7360988f5a6d34a2301880a8084fb493
-        <activity android:name=".Login.LoginActivity" />
-        <activity android:name=".Login.ConsumerLoginActivity" />
-        <activity android:name=".Join.ConsumerTermsActivity" />
-        <activity android:name=".Join.ConsumerJoin1Activity" />
-        <activity android:name=".Join.ConsumerJoin2Activity" />
-        <activity android:name=".Join.ConsumerJoin3Activity" />
-        <activity android:name=".Splash.SplashActivity" />
-        <activity android:name=".MapActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,8 +17,16 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".MyPage.MyPageActivity">
-        </activity>
+        <activity android:name=".map.LocationChange" />
+        <activity android:name=".Login.LoginActivity" />
+        <activity android:name=".Login.ConsumerLoginActivity" />
+        <activity android:name=".Join.ConsumerTermsActivity" />
+        <activity android:name=".Join.ConsumerJoin1Activity" />
+        <activity android:name=".Join.ConsumerJoin2Activity" />
+        <activity android:name=".Join.ConsumerJoin3Activity" />
+        <activity android:name=".Splash.SplashActivity" />
+        <activity android:name=".MapActivity"/>
+        <activity android:name=".MyPage.MyPageActivity"/>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
