--- a/Woong_Android/app/src/main/AndroidManifest.xml
+++ b/Woong_Android/app/src/main/AndroidManifest.xml
@@ -17,18 +17,15 @@
         </activity>
         <activity android:name=".map.LocationChange" />
         <activity android:name=".Login.LoginActivity" />
-        <activity android:name=".Login.ConsumerLoginActivity" />
-        <activity android:name=".Join.ConsumerTermsActivity" />
-        <activity android:name=".Join.ConsumerJoin1Activity" />
-        <activity android:name=".Join.ConsumerJoin2Activity" />
-        <activity android:name=".Join.ConsumerJoin3Activity" />
-        <activity android:name=".Splash.SplashActivity" />
-        <activity android:name=".Join.MapActivity">
+        <activity android:name=".Join.Consumer.TermsActivity" />
+        <activity android:name=".Join.Consumer.Join1Activity" />
+        <activity android:name=".Join.Consumer.Join2Activity" />
+        <activity android:name=".Join.Consumer.AllergyActivity" />
+        <activity android:name=".Splash.SplashActivity">
 
         </activity>
-
-        <activity android:name=".MyPage.MyPageActivity">
-        </activity>
+        <activity android:name=".Join.Consumer.MapActivity"/>
+        <activity android:name=".MyPage.MyPageActivity"/>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
