--- a/Woong_Android/app/src/main/AndroidManifest.xml
+++ b/Woong_Android/app/src/main/AndroidManifest.xml
@@ -21,9 +21,9 @@
         <activity android:name=".Join.Consumer.Join1Activity" />
         <activity android:name=".Join.Consumer.Join2Activity" />
         <activity android:name=".Join.Consumer.AllergyActivity" />
-        <activity android:name=".Splash.SplashActivity"> </activity>
+        <activity android:name=".Splash.SplashActivity">
+        </activity>
         <activity android:name=".Join.Consumer.MapActivity"/>
-        <activity android:name=".MyPage.MyPageActivity"/>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
