--- a/Woong_Android/app/src/main/AndroidManifest.xml
+++ b/Woong_Android/app/src/main/AndroidManifest.xml
@@ -35,19 +35,16 @@
         <activity android:name=".Join.Marketer.TermsActivity" />
         <activity android:name=".Join.Marketer.Join1Activity" />
         <activity android:name=".Join.Marketer.Join2Activity" />
-
         <activity android:name=".Join.Marketer.Market.Enroll1Activity"></activity>
         <activity android:name=".Join.Marketer.Market.Enroll2Activity" />
         <activity android:name=".Join.Marketer.Market.Enroll3Activity" />
         <activity android:name=".myproduct.payment.PaymentActivity" />
         <activity android:name=".notice.message.chat.NoticeChatActivity" />
         <activity android:name=".notice.deliveryandreview.review_write.ReviewWriteActivity"></activity>
-
-
         <activity android:name=".Join.Marketer.Market.Enroll1SearchActivity" />
         <activity android:name=".Login.ConsumerLoginActivity" />
         <activity android:name=".Login.MarketerLoginActivity"></activity>
-
+        <activity android:name=".seller_market.SellerMarketActivity" />
     </application>
 
 </manifest>
