--- a/Woong_Android/app/src/main/AndroidManifest.xml
+++ b/Woong_Android/app/src/main/AndroidManifest.xml
@@ -24,26 +24,26 @@
             </intent-filter>
         </activity>
         <activity android:name=".map.LocationChange" />
-        <activity android:name=".Login.LoginActivity" />
-        <activity android:name=".Join.Consumer.TermsActivity" />
-        <activity android:name=".Join.Consumer.Join1Activity" />
-        <activity android:name=".Join.Consumer.Join2Activity" />
-        <activity android:name=".Join.Consumer.AllergyActivity" />
-        <activity android:name=".Splash.SplashActivity" />
+        <activity android:name=".login.LoginActivity" />
+        <activity android:name=".join.consumer.TermsActivity" />
+        <activity android:name=".join.consumer.Join1Activity" />
+        <activity android:name=".join.consumer.Join2Activity" />
+        <activity android:name=".join.consumer.AllergyActivity" />
+        <activity android:name=".splash.SplashActivity" />
         <activity android:name=".map.MapActivity" />
         <activity android:name=".map.LocationSearchActivity" />
-        <activity android:name=".Join.Marketer.TermsActivity" />
-        <activity android:name=".Join.Marketer.Join1Activity" />
-        <activity android:name=".Join.Marketer.Join2Activity" />
-        <activity android:name=".Join.Marketer.Market.Enroll1Activity"></activity>
-        <activity android:name=".Join.Marketer.Market.Enroll2Activity" />
-        <activity android:name=".Join.Marketer.Market.Enroll3Activity" />
+        <activity android:name=".join.marketer.TermsActivity" />
+        <activity android:name=".join.marketer.Join1Activity" />
+        <activity android:name=".join.marketer.Join2Activity" />
+        <activity android:name=".join.marketer.market.Enroll1Activity"></activity>
+        <activity android:name=".join.marketer.market.Enroll2Activity" />
+        <activity android:name=".join.marketer.market.Enroll3Activity" />
         <activity android:name=".myproduct.payment.PaymentActivity" />
         <activity android:name=".notice.message.chat.NoticeChatActivity" />
         <activity android:name=".notice.deliveryandreview.review_write.ReviewWriteActivity"></activity>
-        <activity android:name=".Join.Marketer.Market.Enroll1SearchActivity" />
-        <activity android:name=".Login.ConsumerLoginActivity" />
-        <activity android:name=".Login.MarketerLoginActivity"></activity>
+        <activity android:name=".join.marketer.market.Enroll1SearchActivity" />
+        <activity android:name=".login.ConsumerLoginActivity" />
+        <activity android:name=".login.MarketerLoginActivity"></activity>
         <activity android:name=".seller_market.SellerMarketActivity" />
     </application>
 
