--- a/Woong_Android/app/build.gradle
+++ b/Woong_Android/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation files('libs/libDaumMapAndroid.jar')
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 }
