처음로그인시 위치등록, 로그인후 위치가져오기, 위치변경하기 완료

--- a/Woong_Android/app/build.gradle
+++ b/Woong_Android/app/build.gradle
@@ -4,6 +4,9 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'realm-android'
+apply plugin: 'kotlin-kapt'
+
 android {
     signingConfigs {
         release {
@@ -22,6 +25,14 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'x86', 'x86_64', 'armeabi-v7a', 'armeabi'
+            universalApk false
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -32,6 +43,11 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+}
+repositories {
+    maven {
+        url "https://jitpack.io"
     }
 }
 
