--- a/Woong_Android/build.gradle
+++ b/Woong_Android/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         jcenter()
     }
     dependencies {
+        classpath "io.realm:realm-gradle-plugin:5.0.0"
         classpath 'com.android.tools.build:gradle:3.2.0-alpha09'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
